--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
         <header></header>
     </main>
     <section class="portfolio-block website gradient">
-        <h3 class="text-center">🧠 How it works 🧠</h3>
+        <h3 class="text-center">How it works</h3>
         <br>
-        <h4 class="text-center">Autoprint is an accessory for your 3d printer which allows you to <br>print models you find online without downloading or slicing them. <br>It does it by utilizing a raspberry pi which receives the link to the <br>model, then subsequently downloads, slices, and directly sends <br>commands to your 3d printer until the print is finished.</h4>
+        <h4 class="text-center">Autoprint is an accessory for your 3D printer which allows you to <br>print models you find online without downloading or slicing them. <br>It uses a small but powerful processor called a Raspberry Pi, which receives the link to the <br>model, then downloads and slices the model, and directly sends <br>commands to your 3D printer until the print is finished.</h4>
         <br>
-        <h3 class="text-center">📋 3 setup steps 📋</h3>
+        <h3 class="text-center"> 3 setup steps </h3>
         <br>
-        <h4 class="text-center">1. Install our chrome extension<br>2. Connect your APK (Raspberry Pi) to your wifi<br>3. Connect APK to your printer via USB</h3><br><h3 class="text-center">🎉 Congrats 🎉 <br><br>You can now print models you find online with (basically) one click!</h3>
+        <h4 class="text-center">1. Install our Chrome extension<br>2. Connect your APK (Autoprint Kit) to your Wifi<br>3. Connect APK to your printer via USB</h3><br><h3 class="text-center">🎉 Congrats 🎉 <br><br>You can now print models you find online with (basically) one click!</h3>
         <div class="row align-items-center">
             <div class="col-md-12 col-lg-5">
                 <div class="portfolio-laptop-mockup"></div>
@@ -49,7 +49,7 @@
         </div>
     </section>
     <footer class="page-footer">
-        <p class="text-center">We haven't launched quite yet... Feel free to <a href="mailto: hello@autoprint.xyz">💻 email us 💻</a> if you would like to test our beta 😁🤓</p>
+        <p class="text-center">We haven't launched quite yet... Feel free to <a href="mailto: hello@autoprint.xyz" email us </a> if you would like to test our beta.</p>
         <div class="container">
             <div class="links"></div>
             <div class="social-icons"><a href="https://github.com/Autoprint-Labs" style="color: rgb(69,98,252);" target="_blank"><i class="icon ion-social-github"></i></a></div>
