return congrats emojis at ben's request

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <br>
         <h3 class="text-center"> 3 setup steps </h3>
         <br>
-        <h4 class="text-center">1. Install our Chrome extension<br>2. Connect your APK (Autoprint Kit) to your Wifi<br>3. Connect APK to your printer via USB</h3><br><h3 class="text-center"> Congrats <br><br>You can now print models you find online with (basically) one click!</h3>
+        <h4 class="text-center">1. Install our Chrome extension<br>2. Connect your APK (Autoprint Kit) to your Wifi<br>3. Connect APK to your printer via USB</h3><br><h3 class="text-center"> 🎉 Congrats 🎉 <br><br>You can now print models you find online with (basically) one click!</h3>
         <div class="row align-items-center">
             <div class="col-md-12 col-lg-5">
                 <div class="portfolio-laptop-mockup"></div>
