--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <section class="portfolio-block website gradient">
         <h3 class="text-center">How it works</h3>
         <br>
-        <h4 class="text-center">Autoprint is an accessory for your 3D printer which allows you to <br>print models you find online without downloading or slicing them. <br>It uses a small but powerful processor called a Raspberry Pi, which receives the link to the <br>model, then downloads and slices the model, and directly sends <br>commands to your 3D printer until the print is finished.</h4>
+        <h4 class="text-center">Autoprint is an accessory for your 3D printer which allows you to <br>print models you find online without downloading or slicing them. <br>It uses a Raspberry Pi, which receives the link to the model, then <br>downloads and slices the model, and directly sends commands to<br> your 3D printer until the print is finished.</h4>
         <br>
         <h3 class="text-center"> 3 setup steps </h3>
         <br>
@@ -49,7 +49,7 @@
         </div>
     </section>
     <footer class="page-footer">
-        <p class="text-center">We haven't launched quite yet... Feel free to <a href="mailto: hello@autoprint.xyz"/>email us</a> if you would like to test our beta.</p>
+        <p class="text-center">Feel free to <a href="mailto: hello@autoprint.xyz"/>email us</a> if you are interested or would like to test our beta 😃</p>
         <div class="container">
             <div class="links"></div>
             <div class="social-icons"><a href="https://github.com/Autoprint-Labs" style="color: rgb(69,98,252);" target="_blank"><i class="icon ion-social-github"></i></a></div>
