--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </nav>
     <main class="page lanidng-page">
         <section class="portfolio-block block-intro">
-            <h1>  3d printing just got easier. </h1>
+            <h1>  3d print with Autoprint </h1>
             <br>
             <header></header><video autoplay muted loop id="myVideo" width="50%">
             <source src="video.mp4" type="video/mp4" >
@@ -37,24 +37,21 @@
     <section class="portfolio-block website gradient">
         <h3 class="text-center">How it works</h3>
         <br>
-        <h4 class="text-center">Autoprint is an accessory for your 3D printer which allows you to <br>print models you find online without downloading or slicing them. <br>It uses a Raspberry Pi, which receives the link to the model, then <br>downloads and slices the model, and directly sends commands to<br> your 3D printer until the print is finished.</h4>
+        <h4 class="text-center">With Autoprint you can print models you find online effortlessly. <br>If you have a 3d printer and want to speed up your slicing process, <br>this product is for you. It makes 3d printing online models as easy<br>as paper printing. How though? Our product sits right by your 3d<br>printer and automates the whole slicing process for you. It's cool.<br>
         <br>
-        <h3 class="text-center"> 3 setup steps </h3>
+        <h3 class="text-center"> Simple Setup </h3>
         <br>
-        <h4 class="text-center">1. Install our Chrome extension<br>2. Connect your APK (Autoprint Kit) to your Wifi<br>3. Connect APK to your printer via USB</h3><br><h3 class="text-center"> 🎉 Congrats 🎉 <br><br>You can now print models you find online with (basically) one click!</h3>
-        <div class="row align-items-center">
+            <h4 class="text-center">1. Install our Chrome extension<br>2. Connect your Autoprint Kit to your Wifi<br>3. Connect APK to your printer via USB</h3><h4 class="text-center"> 🎉 Congrats 🎉 <br><i>You can now effortlessly 3d print models you find online</i></h4>
+            <br>
+            <h3 class="text-center"> More cool info</h3>
+            <h4 class="text-center"><br>~ This product works with any standard FDM printer ~<br>(Creality, Prusa, etc.)<br><br>~ It takes under 10 min to setup, and is immediately a timesaver ~<br>(from hours of repetitive slicing)<br><br>~ It is a true plug-and-play solution ~<br>(swerving complicated slicers and learning curves)<br><br>~ You can Autoprint with any device with chrome extensions ~<br>(Your phone, laptop, desktop, chromebook)<br><br>~ It is a modular attachment to your printer, so you can still print via SD card ~<br>(using your favorite slicer for complicated prints)</h4>
+            <div class="row align-items-center">
             <div class="col-md-12 col-lg-5">
                 <div class="portfolio-laptop-mockup"></div>
             </div>
         </div>
     </section>
     <footer class="page-footer">
-        <p class="text-center">Feel free to <a href="mailto: hello@autoprint.xyz"/>email us</a> if you are interested or would like to test our beta 😃</p>
-        <div class="container">
-            <div class="links"></div>
-            <div class="social-icons"><a href="https://github.com/Autoprint-Labs" style="color: rgb(69,98,252);" target="_blank"><i class="icon ion-social-github"></i></a></div>
-        </div>
-        <br>
         <p>Autoprint © 2020</p>
     </footer>
     <script src="assets/js/jquery.min.js"></script>
