--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700">
     <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/css/pikaday.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -26,6 +27,10 @@
         </video>
             <br>
             <style>
+
+                body {
+                    font-family: 'Comfortaa', cursive;
+                }
                 * {box-sizing: border-box;}
                 .mySlides {display: none;}
                 img {vertical-align: middle;
