Added irl video. Should be enough for the site today ;)

--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
             <source src="video.mp4" type="video/mp4" >
             Your browser does not support HTML5 video.
         </video>
+            <video autoplay muted loop id="myVideo2" width="50%">
+                <source src="movieirl.mp4" type="video/mp4" >
+                Your browser does not support HTML5 video.
+            </video>
             <br>
             <style>
 
