Surprise! Checkout that hottt slideshow ;)

--- a/index.html
+++ b/index.html
@@ -112,29 +112,44 @@
 
                 <div class="mySlides fade">
 
-                    <img src="assets/img/avatars/apg4.jpg" style="width:100%">
+                    <img src="assets/img/avatars/app0.jpg" style="width:100%">
 
                 </div>
 
                 <div class="mySlides fade">
 
-                    <img src="assets/img/avatars/apg3.jpg" style="width:100%">
+                    <img src="assets/img/avatars/app1.jpg" style="width:100%">
 
                 </div>
 
                 <div class="mySlides fade">
 
-                    <img src="assets/img/avatars/apg2.jpg" style="width:100%">
+                    <img src="assets/img/avatars/app2.jpg" style="width:100%">
 
                 </div>
                 <div class="mySlides fade">
 
-                    <img src="assets/img/avatars/apg1.jpg" style="width:100%">
+                    <img src="assets/img/avatars/app3.jpg" style="width:100%">
 
                 </div>
                 <div class="mySlides fade">
 
-                    <img src="assets/img/avatars/apg0.jpg" style="width:100%">
+                    <img src="assets/img/avatars/app4.jpg" style="width:100%">
+
+                </div>
+                <div class="mySlides fade">
+
+                    <img src="assets/img/avatars/app5.jpg" style="width:100%">
+
+                </div>
+                 <div class="mySlides fade">
+
+                    <img src="assets/img/avatars/app6.jpg" style="width:100%">
+
+                </div>
+                <div class="mySlides fade">
+
+                    <img src="assets/img/avatars/app7.jpg" style="width:100%">
 
                 </div>
 
@@ -143,6 +158,9 @@
             <br>
 
             <div style="text-align:center">
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
                 <span class="dot"></span>
                 <span class="dot"></span>
                 <span class="dot"></span>
