--- a/index.html
+++ b/index.html
@@ -202,6 +202,24 @@
         <header></header>
     </main>
     
+    <section class="portfolio-block website gradient">
+        <h3 class="text-center">How it works</h3>
+        <br>
+        <h4 class="text-center">With Autoprint you can print models you find online effortlessly. <br>If you have a 3d printer and want to speed up your slicing process, <br>this product is for you. It makes 3d printing online models as easy<br>as paper printing. How though? Our product sits right by your 3d<br>printer and automates the whole slicing process for you. It's cool.<br>
+        <br>
+        <h3 class="text-center"> Simple Setup </h3>
+        <br>
+            <h4 class="text-center">1. Install our Chrome extension<br>2. Connect your Autoprint Kit to your Wifi<br>3. Connect APK to your printer via USB</h3><h4 class="text-center"> 🎉 Congrats 🎉 <br><i>You can now effortlessly 3d print models you find online</i></h4>
+            <br>
+            <h3 class="text-center"> More cool info</h3>
+            <h4 class="text-center"><br>~ This product works with any standard FDM printer ~<br>(Creality, Prusa, etc.)<br><br>~ It takes under 10 min to setup, and is immediately a timesaver ~<br>(from hours of repetitive slicing)<br><br>~ It is a true plug-and-play solution ~<br>(swerving complicated slicers and learning curves)<br><br>~ You can Autoprint with any device with chrome extensions ~<br>(Your phone, laptop, desktop, chromebook)<br><br>~ It is a modular attachment to your printer, so you can still print via SD card ~<br>(using your favorite slicer for complicated prints)</h4>
+            <div class="row align-items-center">
+            <div class="col-md-12 col-lg-5">
+                <div class="portfolio-laptop-mockup"></div>
+            </div>
+        </div>
+    </section>
+    
     <footer class="page-footer">
         <p>Autoprint © 2020</p>
     </footer>
