--- a/index.html
+++ b/index.html
@@ -1,232 +1,120 @@
 <!DOCTYPE html>
-<html class="text-secondary">
+<html>
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Autoprint</title>
-    <link rel="shortcut icon" type="image/x-icon" href="assets/img/avatars/autoprint.PNG"/>
+    <title>Λutoprint</title>
+    <link rel="icon" type="image/png" sizes="557x557" href="assets/img/autoprint.png">
+    <link rel="icon" type="image/png" sizes="557x557" href="assets/img/autoprint.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700">
-    <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/css/pikaday.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Comfortaa&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cabin:700">
+    <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
+    <link rel="stylesheet" href="assets/css/GradeJS-the-preview-image-do-not-reflect-the-effect.css">
 </head>
 
-<body>
-    <nav class="navbar navbar-dark navbar-expand-lg fixed-top bg-white portfolio-navbar gradient">
-        <div class="container"><img src="assets/img/avatars/autoprinttext.png" width="25%"><a class="navbar-brand logo" href="#"></a></div>
-    </nav>
-    <main class="page lanidng-page">
-        <section class="portfolio-block block-intro">
-            <h1>  3d print with Autoprint </h1>
-            <br>
-            <header></header><video autoplay muted loop id="myVideo" width="50%">
-            <source src="video.mp4" type="video/mp4" >
-            Your browser does not support HTML5 video.
-        </video>
-            <video autoplay muted loop id="myVideo2" width="50%">
-                <source src="movieirl.mp4" type="video/mp4" >
-                Your browser does not support HTML5 video.
-            </video>
-            <br>
-            <style>
-
-                body {
-                    font-family: 'Comfortaa', cursive;
-                }
-                * {box-sizing: border-box;}
-                .mySlides {display: none;}
-                img {vertical-align: middle;
-                    }
-
-                /* Slideshow container */
-                .slideshow-container {
-                    width: 50%;
-                    position: relative;
-                    margin: auto;
-                }
-
-                /* Caption text */
-                .text {
-                    color: #f2f2f2;
-                    font-size: 15px;
-                    padding: 8px 12px;
-                    position: absolute;
-                    bottom: 8px;
-                    width: 100%;
-                    text-align: center;
-                }
-
-                /* Number text (1/3 etc) */
-                .numbertext {
-                    color: #f2f2f2;
-                    font-size: 12px;
-                    padding: 8px 12px;
-                    position: absolute;
-                    top: 0;
-                }
-
-                /* The dots/bullets/indicators */
-                .dot {
-                    height: 15px;
-                    width: 15px;
-                    margin: 0 2px;
-                    background-color: #bbb;
-                    border-radius: 50%;
-                    display: inline-block;
-                    transition: background-color 0.6s ease;
-                }
-
-                .active {
-                    background-color: #717171;
-                }
-
-                /* Fading animation */
-                .fade {
-                    -webkit-animation-name: fade;
-                    -webkit-animation-duration: 0.5s;
-                    animation-name: fade;
-                    animation-duration: 5s;
-                }
-
-                @-webkit-keyframes fade {
-                    from {opacity: .75}
-                    to {opacity: 1}
-                }
-
-                @keyframes fade {
-                    from {opacity: .75}
-                    to {opacity: 1}
-                }
-
-                /* On smaller screens, decrease text size */
-                @media only screen and (max-width: 300px) {
-                    .text {font-size: 11px}
-                }
-            </style>
-            </head>
-            <body>
-
-            <div class="slideshow-container">
-
-                <div class="mySlides fade">
-
-                    <img src="assets/img/avatars/app0.jpg" style="width:100%">
-
+<body id="page-top">
+    <nav class="navbar navbar-light navbar-expand-md navbar navbar-expand-lg fixed-top" id="mainNav">
+        <div class="container"><a class="navbar-brand js-scroll-trigger" href="#">Λ<strong>utoprint</strong></a><button data-toggle="collapse" data-target="#navbarResponsive" class="navbar-toggler navbar-toggler-right" type="button" aria-controls="navbarResponsive" aria-expanded="false"
+                aria-label="Toggle navigation" value="Menu"><i class="fa fa-bars"></i></button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="nav navbar-nav ml-auto"></ul>
+                <div class="collapse navbar-collapse" id="navbarResponsive">
+                    <ul class="nav navbar-nav ml-auto">
+                        <li class="nav-item nav-link js-scroll-trigger"><a class="nav-link active js-scroll-trigger" href="#about">PRE-Order</a></li>
+                        <li class="nav-item nav-link js-scroll-trigger"><a class="nav-link js-scroll-trigger" href="#download">Whitepaper</a></li>
+                        <li class="nav-item nav-link js-scroll-trigger"><a class="nav-link js-scroll-trigger" href = "mailto: Hello@Autoprint.xyz">contact</a></li>
+                    </ul>
                 </div>
-
-                <div class="mySlides fade">
-
-                    <img src="assets/img/avatars/app1.jpg" style="width:100%">
-
-                </div>
-
-                <div class="mySlides fade">
-
-                    <img src="assets/img/avatars/app2.jpg" style="width:100%">
-
-                </div>
-                <div class="mySlides fade">
-
-                    <img src="assets/img/avatars/app3.jpg" style="width:100%">
-
-                </div>
-                <div class="mySlides fade">
-
-                    <img src="assets/img/avatars/app4.jpg" style="width:100%">
-
-                </div>
-                <div class="mySlides fade">
-
-                    <img src="assets/img/avatars/app5.jpg" style="width:100%">
-
-                </div>
-                 <div class="mySlides fade">
-
-                    <img src="assets/img/avatars/app6.jpg" style="width:100%">
-
-                </div>
-                <div class="mySlides fade">
-
-                    <img src="assets/img/avatars/app7.jpg" style="width:100%">
-
-                </div>
-
-
-            </div>
-            <br>
-
-            <div style="text-align:center">
-                <span class="dot"></span>
-                <span class="dot"></span>
-                <span class="dot"></span>
-                <span class="dot"></span>
-                <span class="dot"></span>
-                <span class="dot"></span>
-                <span class="dot"></span>
-                <span class="dot"></span>
-            </div>
-
-            <script>
-                var slideIndex = 0;
-                showSlides();
-
-                function showSlides() {
-                    var i;
-                    var slides = document.getElementsByClassName("mySlides");
-                    var dots = document.getElementsByClassName("dot");
-                    for (i = 0; i < slides.length; i++) {
-                        slides[i].style.display = "none";
-                    }
-                    slideIndex++;
-                    if (slideIndex > slides.length) {slideIndex = 1}
-                    for (i = 0; i < dots.length; i++) {
-                        dots[i].className = dots[i].className.replace(" active", "");
-                    }
-                    slides[slideIndex-1].style.display = "block";
-                    dots[slideIndex-1].className += " active";
-                    setTimeout(showSlides, 5000); // Change image every 2 seconds
-                }
-            </script>
-
-        </section>
-        <section class="portfolio-block photography">
-            <div class="container">
-                <div class="row no-gutters">
-                    <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"></a></div>
-                    <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"></a></div>
-                </div>
-            </div>
-        </section>
-        <header></header>
-    </main>
-    <section class="portfolio-block website gradient">
-        <h3 class="text-center">How it works</h3>
-        <br>
-        <h4 class="text-center">With Autoprint you can print models you find online effortlessly. <br>If you have a 3d printer and want to speed up your slicing process, <br>this product is for you. It makes 3d printing online models as easy<br>as paper printing. How though? Our product sits right by your 3d<br>printer and automates the whole slicing process for you. It's cool.<br>
-        <br>
-        <h3 class="text-center"> Simple Setup </h3>
-        <br>
-            <h4 class="text-center">1. Install our Chrome extension<br>2. Connect your Autoprint Kit to your Wifi<br>3. Connect APK to your printer via USB</h3><h4 class="text-center"> 🎉 Congrats 🎉 <br><i>You can now effortlessly 3d print models you find online</i></h4>
-            <br>
-            <h3 class="text-center"> More cool info</h3>
-            <h4 class="text-center"><br>~ This product works with any standard FDM printer ~<br>(Creality, Prusa, etc.)<br><br>~ It takes under 10 min to setup, and is immediately a timesaver ~<br>(from hours of repetitive slicing)<br><br>~ It is a true plug-and-play solution ~<br>(swerving complicated slicers and learning curves)<br><br>~ You can Autoprint with any device with chrome extensions ~<br>(Your phone, laptop, desktop, chromebook)<br><br>~ It is a modular attachment to your printer, so you can still print via SD card ~<br>(using your favorite slicer for complicated prints)</h4>
-            <div class="row align-items-center">
-            <div class="col-md-12 col-lg-5">
-                <div class="portfolio-laptop-mockup"></div>
             </div>
         </div>
+    </nav>
+    <header class="masthead" style="background-image:url('intro-bg.jpg');"><div class="intro-body">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-8 mx-auto">
+                <h1 class="brand-heading">Λutoprint Kit</h1>
+                <p class="intro-text">The Future Of 3D Printing</p><a class="btn btn-link btn-circle" role="button" href="#about"><i class="fa fa-angle-double-down animated"></i></a></div>
+        </div>
+    </div>
+</div></header>
+    <section id="about" class="content-section text-center"><p><br /><strong>The Λutoprint Kit is the most simplified and automated interface for your 3D printer</strong><br /><strong></strong><br /><strong>  Eliminate unnecessary steps and 3D print your models quickly and efficiently</strong><br /></p><!-- Load Stripe.js on your website. -->
+<script src="https://js.stripe.com/v3"></script>
+
+<!-- Create a button that your customers click to complete their purchase. Customize the styling to suit your branding. -->
+<br>
+<br>
+<button
+  style="background-color:#23de9b;color:#FFF;padding:8px 12px;border:0;border-radius:4px;font-size:1.5em"
+  id="checkout-button-price_1IkFMzD9PX7CSxGo1INVqq01"
+  role="link"
+  type="button"
+>
+  Pre-Order
+</button>
+
+<div id="error-message"></div>
+
+<script>
+(function() {
+  var stripe = Stripe('pk_live_NYzUPLifbHf8onWhGy7WgHPn');
+
+  var checkoutButton = document.getElementById('checkout-button-price_1IkFMzD9PX7CSxGo1INVqq01');
+  checkoutButton.addEventListener('click', function () {
+    /*
+     * When the customer clicks on the button, redirect
+     * them to Checkout.
+     */
+    stripe.redirectToCheckout({
+      lineItems: [{price: 'price_1IkFMzD9PX7CSxGo1INVqq01', quantity: 1}],
+      mode: 'payment',
+      /*
+       * Do not rely on the redirect to the successUrl for fulfilling
+       * purchases, customers may not always reach the success_url after
+       * a successful payment.
+       * Instead use one of the strategies described in
+       * https://stripe.com/docs/payments/checkout/fulfill-orders
+       */
+      successUrl: 'https://Autoprint.xyz/thanks',
+      cancelUrl: 'https://Autoprint.xyz/bummer',
+    })
+    .then(function (result) {
+      if (result.error) {
+        /*
+         * If `redirectToCheckout` fails due to a browser or network
+         * error, display the localized error message to your customer.
+         */
+        var displayError = document.getElementById('error-message');
+        displayError.textContent = result.error.message;
+      }
+    });
+  });
+})();
+</script>
+<br>
+<br><img style="background: url(&quot;assets/img/app3.jpg&quot;);width: 50%;" src="assets/img/app3.jpg">
+        <div style="height: 20 px;"></div><br><br>
+<img src="assets/img/Frame%20229%20(1).png" style="width: 60%;padding-top: 20 px;" /></section>
+    <section id="download" class="download-section content-section text-center" style="background-image:url('downloads-bg.jpg');">
+        <div class="container">
+            <div class="col-lg-8 mx-auto">
+                <h1>Whitepaper</h1>
+                <p></p><button class="btn btn-primary btn-lg btn-default" type="button">not public</button></div>
+        </div>
     </section>
-    <footer class="page-footer">
-        <p>Autoprint © 2020</p>
+    <div class="map-clean"></div>
+    <footer>
+        <div class="container text-center">
+            <p>Copyright ©&nbsp;Λutoprint Labs 2021</p>
+        </div>
     </footer>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/pikaday.min.js"></script>
-    <script src="assets/js/theme.js"></script>
-    <script async defer src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
-    <noscript><img src="https://queue.simpleanalyticscdn.com/noscript.gif" alt=""/></noscript>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+    <script src="assets/js/grayscale.js"></script>
+    <script src="assets/js/GradeJS-the-preview-image-do-not-reflect-the-effect-1.js"></script>
+    <script src="assets/js/GradeJS-the-preview-image-do-not-reflect-the-effect.js"></script>
 </body>
 
 </html>
