--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
        * https://stripe.com/docs/payments/checkout/fulfill-orders
        */
       successUrl: 'https://Autoprint.xyz/thanks',
-      cancelUrl: 'https://Autoprint.xyz/bummer',
+      cancelUrl: 'https://Autoprint.xyz',
     })
     .then(function (result) {
       if (result.error) {
