--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <div class="container">
             <div class="col-lg-8 mx-auto">
                 <h1>Whitepaper</h1>
-                <p></p><button class="btn btn-primary btn-lg btn-default" type="button">not public</button></div>
+                <p></p><button class="btn btn-primary btn-lg btn-default" type="button"><a href="https://docs.google.com/document/d/1Zh-qaFJ0ha3B5g7a_niG2_C3nmPJabXB1tLI8DcoPCU/edit?usp=sharing" target="_blank">Read Here!</a></button></div>
         </div>
     </section>
     <div class="map-clean"></div>
