--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
        * Instead use one of the strategies described in
        * https://stripe.com/docs/payments/checkout/fulfill-orders
        */
-      successUrl: 'https://Autoprint.xyz/thanks',
+      successUrl: 'https://Autoprint.xyz/thanks.html',
       cancelUrl: 'https://Autoprint.xyz',
     })
     .then(function (result) {
