--- a/thanks.html
+++ b/thanks.html
@@ -1,9 +1,10 @@
 <html>
     <center>
     <body>
-        <h1>Thank you for your pre-order! We will email you within 24 hours with confirmation details :)</h1>
+        <h1>Thank you for your pre-order!</h1>
+        <h1>We will email you within 24 hours with confirmation details :)</h1>
         <br>
-        <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwww.catersnews.com%2Fwp-content%2Fuploads%2F2018%2F08%2F0_CATERS_THUMBS_UP_ORANGUTAN_01.jpg&f=1&nofb=1">
+        <img style="border-radius: 20px;width:500px;" src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwww.catersnews.com%2Fwp-content%2Fuploads%2F2018%2F08%2F0_CATERS_THUMBS_UP_ORANGUTAN_01.jpg&f=1&nofb=1">
     </body>
 </center>
 </html>
