fixing email. gmail is more reliable rn... will fix after

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <ul class="nav navbar-nav ml-auto">
                         <li class="nav-item nav-link js-scroll-trigger"><a class="nav-link active js-scroll-trigger" href="#about">PRE-Order</a></li>
                         <li class="nav-item nav-link js-scroll-trigger"><a class="nav-link js-scroll-trigger" href="#download">Whitepaper</a></li>
-                        <li class="nav-item nav-link js-scroll-trigger"><a class="nav-link js-scroll-trigger" href = "mailto: Hello@Autoprint.xyz">contact</a></li>
+                        <li class="nav-item nav-link js-scroll-trigger"><a class="nav-link js-scroll-trigger" href = "mailto: autoprintlabs@gmail.com">contact</a></li>
                     </ul>
                 </div>
             </div>
