Website post-Kickstarter

--- a/index.html
+++ b/index.html
@@ -4,117 +4,134 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Λutoprint</title>
-    <link rel="icon" type="image/png" sizes="557x557" href="assets/img/autoprint.png">
-    <link rel="icon" type="image/png" sizes="557x557" href="assets/img/autoprint.png">
+    <title>Home - Autoprint</title>
+    <meta name="description" content="Start 3D printing in seconds! Autoprint takes care of downloading, slicing, and sending so anyone can print quickly and efficiently!">
+    <link rel="icon" type="image/png" sizes="445x445" href="assets/img/autoprintA.png">
+    <link rel="icon" type="image/png" sizes="445x445" href="assets/img/autoprintA.png">
+    <link rel="icon" type="image/png" sizes="445x445" href="assets/img/autoprintA.png">
+    <link rel="icon" type="image/png" sizes="445x445" href="assets/img/autoprintA.png">
+    <link rel="icon" type="image/png" sizes="445x445" href="assets/img/autoprintA.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cabin:700">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Muli">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Comfortaa">
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
-    <link rel="stylesheet" href="assets/css/GradeJS-the-preview-image-do-not-reflect-the-effect.css">
+    <link rel="stylesheet" href="assets/css/dh-card-image-left-dark.css">
+    <link rel="stylesheet" href="assets/css/Projects-Horizontal.css">
 </head>
 
-<body id="page-top">
-    <nav class="navbar navbar-light navbar-expand-md navbar navbar-expand-lg fixed-top" id="mainNav">
-        <div class="container"><a class="navbar-brand js-scroll-trigger" href="#">Λ<strong>utoprint</strong></a><button data-toggle="collapse" data-target="#navbarResponsive" class="navbar-toggler navbar-toggler-right" type="button" aria-controls="navbarResponsive" aria-expanded="false"
-                aria-label="Toggle navigation" value="Menu"><i class="fa fa-bars"></i></button>
+<body id="page-top" data-bs-spy="scroll" data-bs-target="#mainNav" data-bs-offset="56">
+    <nav class="navbar navbar-light navbar-expand-lg fixed-top" id="mainNav">
+        <div class="container"><a class="navbar-brand" href="#page-top" style="color: var(--bs-dark);font-family: comfortaa;">Autoprint</a><button data-bs-toggle="collapse" data-bs-target="#navbarResponsive" class="navbar-toggler float-end" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><i class="fa fa-bars"></i></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
-                <ul class="nav navbar-nav ml-auto"></ul>
-                <div class="collapse navbar-collapse" id="navbarResponsive">
-                    <ul class="nav navbar-nav ml-auto">
-                        <li class="nav-item nav-link js-scroll-trigger"><a class="nav-link active js-scroll-trigger" href="#about">PRE-Order</a></li>
-                        <li class="nav-item nav-link js-scroll-trigger"><a class="nav-link js-scroll-trigger" href="#download">Whitepaper</a></li>
-                        <li class="nav-item nav-link js-scroll-trigger"><a class="nav-link js-scroll-trigger" href = "mailto: autoprintlabs@gmail.com">contact</a></li>
-                    </ul>
-                </div>
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="https://www.kickstarter.com/profile/autoprint" style="color: var(--bs-dark);font-family: comfortaa;" target="_blank">Buy</a></li>
+                    <li class="nav-item" style="color: var(--bs-dark);font-family: comfortaa;"><a class="nav-link" href="https://www.notion.so/Docs-3b5c979eb5c945b1a9ba0044bbf07972" style="color: var(--bs-dark);font-family: comfortaa;" target="_blank">Docs</a></li>
+                    <li class="nav-item" style="color: var(--bs-dark);font-family: comfortaa;"><a class="nav-link" href="https://xk1q9hvtlap.typeform.com/to/grWk9F50" style="color: var(--bs-dark);font-family: comfortaa;" target="_blank">Contact</a></li>
+                </ul>
             </div>
         </div>
     </nav>
-    <header class="masthead" style="background-image:url('intro-bg.jpg');"><div class="intro-body">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-8 mx-auto">
-                <h1 class="brand-heading">Λutoprint Kit</h1>
-                <p class="intro-text">The Future Of 3D Printing</p><a class="btn btn-link btn-circle" role="button" href="#about"><i class="fa fa-angle-double-down animated"></i></a></div>
+    <header class="masthead" style="background: url(&quot;assets/img/bg-pattern.png&quot;);">
+        <div class="container h-100">
+            <div class="row h-100">
+                <div class="col-lg-7 my-auto" style="border-color: rgb(255, 255, 255);border-top-color: rgb(255,;border-right-color: 255,;border-bottom-color: 255);border-left-color: 255,;">
+                    <div class="mx-auto header-content">
+                        <h1 class="mb-5" style="color: var(--bs-dark);font-family: comfortaa;font-size: 39px;">Autoprint Kit enables <strong>anyone</strong> to 3D print in seconds. It downloads, slices, and sends prints so you can print quick and efficient.&nbsp;</h1><a class="btn btn-outline-warning btn-xl" role="button" href="https://www.kickstarter.com/profile/autoprint" style="color: var(--bs-dark);background: rgb(16, 206, 155);" target="_blank">Back our kickstarter!</a>
+                    </div>
+                </div>
+                <div class="col align-content-center align-self-center"><img src="assets/img/autoprintKit.png" width="45%"><span>Text</span><img src="assets/img/Frame%20226.png" width="45%"></div>
+                <div class="col-lg-5 my-auto">
+                    <div class="device-container"></div>
+                    <div class="iphone-mockup"></div>
+                </div>
+            </div>
         </div>
-    </div>
-</div></header>
-    <section id="about" class="content-section text-center"><p><br /><strong>The Λutoprint Kit is the most simplified and automated interface for your 3D printer</strong><br /><strong></strong><br /><strong>  Eliminate unnecessary steps and 3D print your models quickly and efficiently</strong><br /></p><!-- Load Stripe.js on your website. -->
-<script src="https://js.stripe.com/v3"></script>
-
-<!-- Create a button that your customers click to complete their purchase. Customize the styling to suit your branding. -->
-<br>
-<br>
-<button
-  style="background-color:#23de9b;color:#FFF;padding:8px 12px;border:0;border-radius:4px;font-size:1.5em"
-  id="checkout-button-price_1IpytWD9PX7CSxGovNgRMwdg"
-  role="link"
-  type="button"
->
-  Pre-Order
-</button>
-
-<div id="error-message"></div>
-
-<script>
-(function() {
-  var stripe = Stripe('pk_live_NYzUPLifbHf8onWhGy7WgHPn');
-
-  var checkoutButton = document.getElementById('checkout-button-price_1IpytWD9PX7CSxGovNgRMwdg');
-  checkoutButton.addEventListener('click', function () {
-    /*
-     * When the customer clicks on the button, redirect
-     * them to Checkout.
-     */
-    stripe.redirectToCheckout({
-      lineItems: [{price: 'price_1IpytWD9PX7CSxGovNgRMwdg', quantity: 1}],
-      mode: 'payment',
-      /*
-       * Do not rely on the redirect to the successUrl for fulfilling
-       * purchases, customers may not always reach the success_url after
-       * a successful payment.
-       * Instead use one of the strategies described in
-       * https://stripe.com/docs/payments/checkout/fulfill-orders
-       */
-      successUrl: 'https://Autoprint.xyz/thanks.html',
-      cancelUrl: 'https://Autoprint.xyz',
-    })
-    .then(function (result) {
-      if (result.error) {
-        /*
-         * If `redirectToCheckout` fails due to a browser or network
-         * error, display the localized error message to your customer.
-         */
-        var displayError = document.getElementById('error-message');
-        displayError.textContent = result.error.message;
-      }
-    });
-  });
-})();
-</script>
-<br>
-<br><img style="background: url(&quot;assets/img/app3.jpg&quot;);width: 50%;" src="assets/img/app3.jpg">
-        <div style="height: 20 px;"></div><br><br>
-<img src="assets/img/Frame%20229%20(1).png" style="width: 60%;padding-top: 20 px;" /></section>
-    <section id="download" class="download-section content-section text-center" style="background-image:url('downloads-bg.jpg');">
+    </header>
+    <section id="features" class="features" style="background: #10ce9b;">
+        <h1 style="text-align: center;font-family: comfortaa;"><br>The&nbsp;Autoprint&nbsp;Kit is<br>a&nbsp;<strong><em>must-have</em></strong>&nbsp;accessory<br>for your 3D printer&nbsp;<br>&nbsp;</h1>
         <div class="container">
-            <div class="col-lg-8 mx-auto">
-                <h1>Whitepaper</h1>
-                <p></p><button class="btn btn-primary btn-lg btn-default" type="button"><a href="https://docs.google.com/document/d/1Zh-qaFJ0ha3B5g7a_niG2_C3nmPJabXB1tLI8DcoPCU/edit?usp=sharing" target="_blank">Read Here!</a></button></div>
+            <div class="text-center section-heading" style="text-align: center;">
+                <hr>
+            </div>
+            <section class="projects-horizontal" style="border-radius: 10px;">
+                <h2 class="text-center" style="font-family: comfortaa;">Plug-And-Print Solution<br></h2>
+                <div class="container">
+                    <div class="intro">
+                        <p class="text-center" style="font-family: comfortaa;">Setup in minutes, printing in seconds.&nbsp;</p>
+                    </div>
+                    <div class="row projects">
+                        <div class="col-sm-6 item">
+                            <div class="row">
+                                <div class="col-md-12 col-lg-5"><a><img class="img-fluid" src="assets/img/noMod.png" style="width: 171 px;border-radius: 10px;border-style: solid;border-color: var(--bs-teal);border-top-color: rgb(49,;border-right-color: 52,;border-bottom-color: 55);border-left-color: 52,;" width="100%"></a></div>
+                                <div class="col">
+                                    <h3 class="name" style="font-family: comfortaa;">No Modification</h3>
+                                    <p class="description" style="font-family: comfortaa;">Autoprint connects via USB to your printer, <strong>no modification required!</strong>&nbsp;You can still use your printer like you do now.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-6 item">
+                            <div class="row">
+                                <div class="col-md-12 col-lg-5"><a><img class="img-fluid" src="assets/img/accessibleINt.png" width="100%" style="border-radius: 10px;border-style: solid;border-color: var(--bs-teal);"></a></div>
+                                <div class="col">
+                                    <h3 class="name" style="font-family: comfortaa;">Accessible Interface</h3>
+                                    <p class="description" style="font-family: comfortaa;">Using our browser extension,<strong> </strong>you can now start 3D prints<strong> from any device!&nbsp;</strong></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-6 item">
+                            <div class="row">
+                                <div class="col-md-12 col-lg-5"><a><img class="img-fluid" src="assets/img/Frame%20230.png" style="border-radius: 10px;border-style: solid;border-color: var(--bs-teal);"></a></div>
+                                <div class="col">
+                                    <h3 class="name">Printing efficiently</h3>
+                                    <p class="description" style="font-family: comfortaa;">Whether a printing pro or a new maker, you can now start your 3D prints in <strong>a click or two.&nbsp;</strong></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-6 item">
+                            <div class="row">
+                                <div class="col-md-12 col-lg-5"><a><img class="img-fluid" src="assets/img/app2.jpg" style="border-radius: 10px;border-style: solid;border-color: var(--bs-teal);"></a></div>
+                                <div class="col">
+                                    <h3 class="name" style="font-family: comfortaa;">Printing quickly</h3>
+                                    <p class="description" style="font-family: comfortaa;">From an STL to the first line of GCODE, Autoprint averages<strong> 44 times faster</strong> than traditional methods.&nbsp;</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </div>
+        <section>
+            <section class="text-center">
+                <h2 class="text-center" style="font-family: comfortaa;">Autoprint Demo!<br><br></h2>
+                <header></header>
+                <header></header><img src="assets/img/ezgif.com-gif-maker%20(1).gif" style="border-radius: 10px;width: 75%;">
+            </section>
+        </section>
+        <div class="align-items-center photo-card" style="color: rgb(33, 37, 41);background: var(--bs-white);">
+            <div class="align-items-center photo-details">
+                <h2 class="align-items-center" style="font-family: Comfortaa, serif;">Start Printing Quickly + Efficiently<br></h2><a class="btn btn-outline-warning align-items-center btn-xl" role="button" href="https://www.kickstarter.com/profile/autoprint" style="background: rgb(16,206,155);border-color: rgba(255,255,255,0);font-family: comfortaa;padding: 8px 45px;" target="_blank">Pre-order Yours Today!</a>
+                <div class="align-items-center photo-tags">
+                    <ul class="align-items-center">
+                        <li class="align-items-center"></li>
+                    </ul>
+                </div>
+            </div><img class="d-inline-block float-end d-lg-flex align-items-center align-content-center justify-content-lg-center" src="assets/img/Frame%20224.png" width="40%" height="30%">
         </div>
     </section>
-    <div class="map-clean"></div>
-    <footer>
-        <div class="container text-center">
-            <p>Copyright ©&nbsp;Λutoprint Labs 2021</p>
+    <footer style="background: var(--bs-white);">
+        <div class="container">
+            <p style="color: var(--bs-dark);font-family: Comfortaa, serif;">©&nbsp;Autoprint Inc. 2021. All Rights Reserved.</p>
+            <ul class="list-inline" style="color: var(--bs-dark);">
+                <li class="list-inline-item"><a href="privacy.html" style="color: var(--bs-dark);">Privacy</a></li>
+                <li class="list-inline-item"><a href="../terms.html" style="color: var(--bs-dark);">Terms</a></li>
+                <li class="list-inline-item"></li>
+            </ul>
         </div>
     </footer>
-    <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
-    <script src="assets/js/grayscale.js"></script>
-    <script src="assets/js/GradeJS-the-preview-image-do-not-reflect-the-effect-1.js"></script>
-    <script src="assets/js/GradeJS-the-preview-image-do-not-reflect-the-effect.js"></script>
+    <script src="assets/js/new-age.js"></script>
 </body>
 
 </html>
