--- a/terms.html
+++ b/terms.html
@@ -152,7 +152,7 @@ Calibri;color:#595959;mso-themecolor:text1;mso-themetint:166;">In order to resol
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" href="https://www.kickstarter.com/profile/autoprint" style="color: var(--bs-dark);font-family: comfortaa;" target="_blank">Buy</a></li>
                     <li class="nav-item" style="color: var(--bs-dark);font-family: comfortaa;"><a class="nav-link" href="https://www.notion.so/Docs-3b5c979eb5c945b1a9ba0044bbf07972" style="color: var(--bs-dark);font-family: comfortaa;" target="_blank">Docs</a></li>
-                    <li class="nav-item" style="color: var(--bs-dark);font-family: comfortaa;"><a class="nav-link" href="https://xk1q9hvtlap.typeform.com/to/grWk9F50" style="color: var(--bs-dark);font-family: comfortaa;" target="_blank">Contact</a></li>
+                    <li class="nav-item" style="color: var(--bs-dark);font-family: comfortaa;"><a class="nav-link" href="contact.html" style="color: var(--bs-dark);font-family: comfortaa;">Contact</a></li>
                 </ul>
             </div>
         </div>
