--- a/index.html
+++ b/index.html
@@ -120,7 +120,8 @@
                 </div>
             </div><img class="d-inline-block float-end d-lg-flex align-items-center align-content-center justify-content-lg-center" src="assets/img/Frame%20224.png" width="40%" height="30%">
         </div>
-    </section>
+    </section><script async defer src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
+<noscript><img src="https://queue.simpleanalyticscdn.com/noscript.gif" alt="" referrerpolicy="no-referrer-when-downgrade" /></noscript>
     <footer style="background: var(--bs-white);">
         <div class="container">
             <p style="color: var(--bs-dark);font-family: Comfortaa, serif;">©&nbsp;Autoprint Inc. 2021. All Rights Reserved.</p>
