--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,8 @@
                 </ul>
             </div>
         </div>
-    </nav>
+    </nav><script async defer src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
+<noscript><img src="https://queue.simpleanalyticscdn.com/noscript.gif" alt="" referrerpolicy="no-referrer-when-downgrade" /></noscript>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/new-age.js"></script>
 </body>
