--- a/terms.html
+++ b/terms.html
@@ -156,7 +156,8 @@ Calibri;color:#595959;mso-themecolor:text1;mso-themetint:166;">In order to resol
                 </ul>
             </div>
         </div>
-    </nav>
+    </nav><script async defer src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
+<noscript><img src="https://queue.simpleanalyticscdn.com/noscript.gif" alt="" referrerpolicy="no-referrer-when-downgrade" /></noscript>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/new-age.js"></script>
 </body>
