--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="row h-100">
                 <div class="col-lg-7 my-auto" style="border-color: rgb(255, 255, 255);border-top-color: rgb(255,;border-right-color: 255,;border-bottom-color: 255);border-left-color: 255,;">
                     <div class="mx-auto header-content">
-                        <h1 class="mb-5" style="color: var(--bs-dark);font-family: comfortaa;font-size: 39px;">The Autoprint One enables <strong>anyone</strong> to 3D print in seconds. It downloads, slices, and sends prints so you can print quick and efficient.&nbsp;</h1><a class="btn btn-outline-warning btn-xl" role="button" href="https://www.kickstarter.com/profile/autoprint" style="color: var(--bs-dark);background: rgb(16, 206, 155);" target="_blank">Back our kickstarter!</a>
+                        <h1 class="mb-5" style="color: var(--bs-dark);font-family: comfortaa;font-size: 39px;">The Autoprint One enables <strong>anyone</strong> to 3D print in seconds. It downloads, slices, and sends prints so you can print quickly and efficiently.&nbsp;</h1><a class="btn btn-outline-warning btn-xl" role="button" href="https://www.kickstarter.com/profile/autoprint" style="color: var(--bs-dark);background: rgb(16, 206, 155);" target="_blank">Back our kickstarter!</a>
                     </div>
                 </div>
                 <div class="col align-content-center align-self-center"><img src="assets/img/autoprintKit.png" width="45%"><span>Text</span><img src="assets/img/Frame%20226.png" width="45%"></div>
