--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
             <div class="row h-100">
                 <div class="col-lg-7 my-auto" style="border-color: rgb(255, 255, 255);border-top-color: rgb(255,;border-right-color: 255,;border-bottom-color: 255);border-left-color: 255,;">
                     <div class="mx-auto header-content">
-                        <h1 class="mb-5" style="color: var(--bs-dark);font-family: comfortaa;font-size: 39px;">The Autoprint One enables <strong>anyone</strong> to 3D print in seconds. It downloads, slices, and sends prints so you can print quickly and efficiently.&nbsp;</h1><a class="btn btn-outline-warning btn-xl" role="button" href="https://www.kickstarter.com/profile/autoprint" style="color: var(--bs-dark);background: rgb(16, 206, 155);" target="_blank">Back our kickstarter!</a>
+                        <h1 class="mb-5" style="color: var(--bs-dark);font-family: comfortaa;font-size: 39px;">The Autoprint One enables <strong>anyone</strong> to 3D print in seconds. It downloads, slices, and sends prints so you can print quick and efficient.&nbsp;</h1><a class="btn btn-outline-warning btn-xl" role="button" href="https://www.kickstarter.com/profile/autoprint" style="color: var(--bs-dark);background: rgb(16, 206, 155);" target="_blank">Back our kickstarter!</a>
                     </div>
                 </div>
-                <div class="col align-content-center align-self-center"><img src="assets/img/autoprintKit.png" width="45%"><span>Text</span><img src="assets/img/Frame%20226.png" width="45%"></div>
+                <div class="col align-content-center align-self-center"><img src="assets/img/autoprintKit.png" width="45%"><span>Text</span><img src="assets/img/autoprintSlicer.png" width="45%"></div>
                 <div class="col-lg-5 my-auto">
                     <div class="device-container"></div>
                     <div class="iphone-mockup"></div>
@@ -82,7 +82,7 @@
                         </div>
                         <div class="col-sm-6 item">
                             <div class="row">
-                                <div class="col-md-12 col-lg-5"><a><img class="img-fluid" src="assets/img/Frame%20230.png" style="border-radius: 10px;border-style: solid;border-color: var(--bs-teal);"></a></div>
+                                <div class="col-md-12 col-lg-5"><a><img class="img-fluid" src="assets/img/autoprintSlicerPrinting.png" style="border-radius: 10px;border-style: solid;border-color: var(--bs-teal);"></a></div>
                                 <div class="col">
                                     <h3 class="name">Printing efficiently</h3>
                                     <p class="description" style="font-family: comfortaa;">Whether a printing pro or a new maker, you can now start your 3D prints in <strong>a click or two.&nbsp;</strong></p>
@@ -118,7 +118,7 @@
                         <li class="align-items-center"></li>
                     </ul>
                 </div>
-            </div><img class="d-inline-block float-end d-lg-flex align-items-center align-content-center justify-content-lg-center" src="assets/img/Frame%20224.png" width="40%" height="30%">
+            </div><img class="d-inline-block float-end d-lg-flex align-items-center align-content-center justify-content-lg-center" src="assets/img/Autoprinting.png" width="40%" height="30%">
         </div>
     </section><script async defer src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
 <noscript><img src="https://queue.simpleanalyticscdn.com/noscript.gif" alt="" referrerpolicy="no-referrer-when-downgrade" /></noscript>
