Revert "Updated link and policy"
This reverts commit 1274255eecb4d834c3ec11a9dfeb7b64d014d602.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="container"><a class="navbar-brand" href="#page-top" style="color: var(--bs-dark);font-family: comfortaa;">Autoprint</a><button data-bs-toggle="collapse" data-bs-target="#navbarResponsive" class="navbar-toggler float-end" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><i class="fa fa-bars"></i></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="https://www.kickstarter.com/projects/autoprint/autoprint-one-3d-print-in-secondst" style="color: var(--bs-dark);font-family: comfortaa;" target="_blank">Buy</a></li>
+                    <li class="nav-item"><a class="nav-link" href="https://www.kickstarter.com/profile/autoprint" style="color: var(--bs-dark);font-family: comfortaa;" target="_blank">Buy</a></li>
                     <li class="nav-item" style="color: var(--bs-dark);font-family: comfortaa;"><a class="nav-link" href="https://www.notion.so/autoprintinc/Docs-3b5c979eb5c945b1a9ba0044bbf07972" style="color: var(--bs-dark);font-family: comfortaa;" target="_blank">Docs</a></li>
                     <li class="nav-item" style="color: var(--bs-dark);font-family: comfortaa;"><a class="nav-link" href="contact.html" style="color: var(--bs-dark);font-family: comfortaa;">Contact</a></li>
                 </ul>
@@ -38,7 +38,7 @@
             <div class="row h-100">
                 <div class="col-lg-7 my-auto" style="border-color: rgb(255, 255, 255);border-top-color: rgb(255,;border-right-color: 255,;border-bottom-color: 255);border-left-color: 255,;">
                     <div class="mx-auto header-content">
-                        <h1 class="mb-5" style="color: var(--bs-dark);font-family: comfortaa;font-size: 39px;">The Autoprint One enables <strong>anyone</strong> to 3D print in seconds. It downloads, slices, and sends prints so you can print quickly and efficiently.&nbsp;</h1><a class="btn btn-outline-warning btn-xl" role="button" href="https://www.kickstarter.com/projects/autoprint/autoprint-one-3d-print-in-secondst" style="color: var(--bs-dark);background: rgb(16, 206, 155);" target="_blank">Back our kickstarter!</a>
+                        <h1 class="mb-5" style="color: var(--bs-dark);font-family: comfortaa;font-size: 39px;">The Autoprint One enables <strong>anyone</strong> to 3D print in seconds. It downloads, slices, and sends prints so you can print quickly and efficiently.&nbsp;</h1><a class="btn btn-outline-warning btn-xl" role="button" href="https://www.kickstarter.com/profile/autoprint" style="color: var(--bs-dark);background: rgb(16, 206, 155);" target="_blank">Back our kickstarter!</a>
                     </div>
                 </div>
                 <div class="col align-content-center align-self-center"><img src="assets/img/autoprintKit.png" width="45%"><span>Text</span><img src="assets/img/autoprintSlicer.png" width="45%"></div>
@@ -112,7 +112,7 @@
         </section>
         <div class="align-items-center photo-card" style="color: rgb(33, 37, 41);background: var(--bs-white);">
             <div class="align-items-center photo-details">
-                <h2 class="align-items-center" style="font-family: Comfortaa, serif;">Start Printing Quickly + Efficiently<br></h2><a class="btn btn-outline-warning align-items-center btn-xl" role="button" href="https://www.kickstarter.com/projects/autoprint/autoprint-one-3d-print-in-secondst" style="background: rgb(16,206,155);border-color: rgba(255,255,255,0);font-family: comfortaa;padding: 8px 45px;" target="_blank">Pre-order Yours Today!</a>
+                <h2 class="align-items-center" style="font-family: Comfortaa, serif;">Start Printing Quickly + Efficiently<br></h2><a class="btn btn-outline-warning align-items-center btn-xl" role="button" href="https://www.kickstarter.com/profile/autoprint" style="background: rgb(16,206,155);border-color: rgba(255,255,255,0);font-family: comfortaa;padding: 8px 45px;" target="_blank">Pre-order Yours Today!</a>
                 <div class="align-items-center photo-tags">
                     <ul class="align-items-center">
                         <li class="align-items-center"></li>
