--- a/terms.html
+++ b/terms.html
@@ -193,7 +193,7 @@ Calibri;color:#595959;mso-themecolor:text1;mso-themetint:166;">In order to resol
         <div class="container"><a class="navbar-brand" href="index.html" style="color: var(--bs-dark);font-family: comfortaa;">Autoprint</a><button data-bs-toggle="collapse" data-bs-target="#navbarResponsive" class="navbar-toggler float-end" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><i class="fa fa-bars"></i></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="https://www.kickstarter.com/profile/autoprint" style="color: var(--bs-dark);font-family: comfortaa;" target="_blank">Buy</a></li>
+                    <li class="nav-item"><a class="nav-link" href="https://www.kickstarter.com/projects/autoprint/autoprint-one-3d-print-in-secondst" style="color: var(--bs-dark);font-family: comfortaa;" target="_blank">Buy</a></li>
                     <li class="nav-item" style="color: var(--bs-dark);font-family: comfortaa;"><a class="nav-link" href="https://www.notion.so/autoprintinc/Docs-3b5c979eb5c945b1a9ba0044bbf07972" style="color: var(--bs-dark);font-family: comfortaa;" target="_blank">Docs</a></li>
                     <li class="nav-item" style="color: var(--bs-dark);font-family: comfortaa;"><a class="nav-link" href="contact.html" style="color: var(--bs-dark);font-family: comfortaa;">Contact</a></li>
                 </ul>
