Use KS referral tag

--- a/kickstarter.html
+++ b/kickstarter.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <title>Redirecting to Kickstarter</title>
-<meta http-equiv="refresh" content="0; URL=https://www.kickstarter.com/projects/autoprint/autoprint-one-3d-print-in-seconds?ref=website">
-<link rel="canonical" href="https://www.kickstarter.com/projects/autoprint/autoprint-one-3d-print-in-seconds?ref=website">
+<meta http-equiv="refresh" content="0; URL=https://www.kickstarter.com/projects/autoprint/autoprint-one-3d-print-in-seconds?ref=6dqegv">
+<link rel="canonical" href="https://www.kickstarter.com/projects/autoprint/autoprint-one-3d-print-in-seconds?ref=6dqegv">
